--- a/src/Easanles/AtletismoBundle/Resources/views/Miscom/portada_miscom.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Miscom/portada_miscom.html.twig
@@ -91,7 +91,7 @@
                      {% endif %}
                   {% endif %}
                {% else %}
-                  <a type="button" class="btn btn-lg btn-primary btn-block grid-btn" href="{{ path('users_inscripcion', {'sidCom': com.sid}) }}"><span class="visible-xs">Ver inscrib.</span><span class="hidden-xs">Ver inscripción</span></a>
+                  <a type="button" class="btn btn-lg {% if com.pagoPendiente %}btn-warning{% else %}btn-primary{% endif %} btn-block grid-btn" href="{{ path('users_inscripcion', {'sidCom': com.sid}) }}"{% if com.pagoPendiente %} data-toggle="tooltip" data-placement="top" title="Hay pagos pendientes"{% endif %}><span class="visible-xs">Ver inscrib.</span><span class="hidden-xs">Ver inscripción</span></a>
                {% endif %}
             {% elseif com.esOficial == true %}
                <button type="button" class="btn btn-lg btn-default btn-block grid-btn" disabled>Competición oficial</button>
@@ -140,7 +140,11 @@
                   <p class="text-center">Finalizada</p>
                   <a type="button" class="btn btn-default btn-block" href="{% if app.user is not null and is_granted('ROLE_ADMIN') %}{{ path('pantalla_resultados', {"com": com.sid}) }}{% else %}{{ path('users_pantalla_resultados', {"com": com.sid}) }}{% endif %}"><span class="visible-xs">Resultados</span><span class="hidden-xs">Ver resultados</span></a>
                {% elseif com.inscrito == true %}
-                  <p class="text-center text-success">Inscrito</p>
+                  {% if com.pagoPendiente == true %}
+                     <p class="text-center text-warning"> <strong>Hay pagos pendientes</strong></p>
+                  {% else %}
+                     <p class="text-center text-success">Inscrito</p>
+                  {% endif %}
                   {% if com.esOficial == false %}
                      {% if com.esInscrib == false %}
                         <p class="text-center text-muted"><span class="visible-xs">Cerrado</span><span class="hidden-xs">Inscripciones cerradas</span></p>
@@ -160,7 +164,7 @@
                {% elseif com.esOficial == true %}
                   <p class="text-center text-info">Solicite inscripción al coordinador del club</p>
                {% elseif com.esInscrib == true and com.numpruebas >= 1 %}
-                  <p class="text-center text-success">Inscripciones abiertas</p>
+                  <p class="text-center">Inscripciones abiertas</p>
                   {% if com.numpruebas == 1 %}
                      <button type="button" class="btn btn-primary btn-block" onClick="showModal('inscrib', '{{ com.nombre }}', '{{ com.sid }}')">Inscribirse</button>
                   {% else %}
