Mis competiciones: inscripciones

--- a/src/Easanles/AtletismoBundle/Resources/views/Miscom/pruebas_miscom.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Miscom/pruebas_miscom.html.twig
@@ -49,6 +49,7 @@
 
 {% block container %}
    <h1 id="container_title" class="page-header">Inscripción <small>{{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }})</small></h1>
+   <div id="alert-div"></div>
    
    <div class="row">
       <div class="hidden-xs col-sm-4">
@@ -69,17 +70,10 @@
          {% if par|first %}<span class="pull-right"><strong>Tu dorsal: {{ par|first.dorsal }}</strong></span>{% endif %}
          </h4>
             
-         <table class="table table-hover table-bordered table-striped table-responsive">
+         <table class="table table-striped table-responsive">
             <tbody>
-               <tr>
-                  {% if com.esOficial %}
-                     <th>Prueba</th><th>Precio</th><th>Estado</th>
-                  {% else %}
-                     <th>Prueba</th><th>Inscrito</th>
-                  {% endif %}
-               </tr>
                {% for pru in prus %}
-               <tr{% if pru.inscrito == false %} class="text-muted"{% endif %}>
+               <tr{% if com.esOficial and pru.inscrito == false %} class="text-muted"{% endif %}>
                   {% if pru.sexo == 0 %}
                      {% set tpr = pru.nombre ~ '. Masculino, ' ~ pru.entorno %}
                   {% elseif pru.sexo == 1 %}
@@ -92,7 +86,19 @@
                      <td>{% if pru.coste is not null %}{{ pru.coste|number_format(2, ',', '.') }}€{% endif %}</td>
                      <td>{{ pru.estado }}</td>
                   {% else %}
-                     <td><button>control</button></td>
+                     {% if pru.activarInscripciones %}
+                        {% if pru.inscrito %}
+                           <td><button id="btn-ins-{{ pru.sid }}" type="button" class="btn btn-sm btn-info btn-block active" onClick="toggleIns(this)">Inscrito</button></td>
+                        {% else %}
+                           <td><button id="btn-ins-{{ pru.sid }}" type="button" class="btn btn-sm btn-default btn-block" onClick="toggleIns(this)">Inscribirse</button></td>
+                        {% endif %}
+                     {% else %}
+                        <td>{% if pru.inscrito and pru.activarMarcas == false %}<span class="pull-right">Inscrito</span>{% endif %}</td>
+                     {% endif %}
+                  {% endif %}
+                  {% if pru.activarMarcas %}
+                     {% if com.esOficial == false %}<td><a id="btn-int-{{ pru.sid }}" type="button" class="btn btn-sm btn-primary btn-block" href="#"{% if pru.inscrito == false %}disabled{% endif %}>Marca</a></td>{% endif %}
+                     <td><a id="btn-int-{{ pru.sid }}" type="button" class="btn btn-sm btn-default btn-block" href="{{ path("users_pantalla_resultados", {"pru": pru.sid}) }}">Resultados</a></td>
                   {% endif %}
                </tr>
                {% endfor %}
@@ -106,7 +112,6 @@
 
 {% block js %}
    <script src="{{ asset('bundles/atletismo/js/user.js') }}"></script>
-
 {% endblock %}
 
 
