--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_resultados.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_resultados.html.twig
@@ -10,8 +10,6 @@
    <style> .vich-image img {max-width: 200px} </style>
 {% endblock %}
 
-{% block onload %}{% if rol == "user" %}showComs(){% endif %}{% endblock %}
-
 {% block navbar %}
       {% if app.user is not null and app.user.idAtl is not null %}<li><a href="{{ path('mis_competiciones') }}">Mis competiciones</a></li>{% endif %}
       {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li><a href="{{ path('listado_atletas') }}">Atletas</a></li>{% endif %}
@@ -28,8 +26,8 @@
          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Informes <span class="caret"></span></a>
          <ul class="dropdown-menu">
             <li><a class="active" href="{{ path('pantalla_resultados') }}">Resultados</a></li>
-            <li><a class="inactive" href="#">Asistencia a eventos</a></li>
-            <li><a class="inactive" href="#">Pagos</a></li>
+            <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
+            <li><a class="inactive" href="#">Pagos pendientes</a></li>
          </ul>
       </li>{% endif %}
       {% if (app.user is null) or (app.user is not null and not is_granted('ROLE_ADMIN')) %}<li class="active"><a href="{{ path('users_pantalla_resultados') }}">Resultados</a></li>{% endif %}
@@ -144,9 +142,9 @@
       {% if selRon is defined %}
          var autoSelectRon = {{ selRon.sid }};
       {% endif %}
-      </script>
+   </script>
+   <script src="{{ asset('bundles/atletismo/js/resultados.js') }}"></script>
    {% if rol == "admin" %}
-      <script src="{{ asset('bundles/atletismo/js/resultados.js') }}"></script>
       <script src="{{ asset('bundles/atletismo/js/modals.js') }}"></script>
    {% else %}
       <script src="{{ asset('bundles/atletismo/js/user.js') }}"></script>
