--- a/src/Easanles/AtletismoBundle/Resources/views/Miscom/inscripcion_miscom.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Miscom/inscripcion_miscom.html.twig
@@ -24,8 +24,8 @@
          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Informes <span class="caret"></span></a>
          <ul class="dropdown-menu">
             <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
-            <li><a class="inactive" href="#">Asistencia a eventos</a></li>
-            <li><a class="inactive" href="#">Pagos</a></li>
+            <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
+            <li><a class="inactive" href="#">Pagos pendientes</a></li>
          </ul>
       </li>{% endif %}
       {% if (app.user is null) or (app.user is not null and not is_granted('ROLE_ADMIN')) %}<li><a href="{{ path('users_pantalla_resultados') }}">Resultados</a></li>{% endif %}
@@ -62,6 +62,9 @@
          {% endif %}
       </div>
       <div class="col-xs-12 col-sm-8">
+      {% if (atl.lfga is null or atl.lfga == "") and com.esFeder %}
+         <div class="alert alert-warning" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Esta es una prueba federada y no tienes asignada una licencia de la FGA </div>
+      {% else %}
          {% if com.esOficial or com.fecha < ayer %}
             <h4>Categoría {{ cat.nombre }}
          {% else %}
@@ -73,7 +76,7 @@
          <table class="table table-striped table-responsive">
             <tbody>
                {% for pru in prus %}
-               <tr{% if com.esOficial and pru.inscrito == false %} class="text-muted"{% endif %}>
+               <tr{% if pru.activarInscripciones == false and pru.inscrito == false %} class="text-muted"{% endif %}>
                   {% if pru.sexo == 0 %}
                      {% set tpr = pru.nombre ~ '. Masculino, ' ~ pru.entorno %}
                   {% elseif pru.sexo == 1 %}
@@ -108,6 +111,7 @@
                {% endfor %}
             </tbody>
          </table>
+      {% endif %}
       </div>
    </div>
    
