--- a/src/Easanles/AtletismoBundle/Resources/views/Miscom/marcas_miscom.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Miscom/marcas_miscom.html.twig
@@ -33,8 +33,8 @@
          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Informes <span class="caret"></span></a>
          <ul class="dropdown-menu">
             <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
-            <li><a class="inactive" href="#">Asistencia a eventos</a></li>
-            <li><a class="inactive" href="#">Pagos</a></li>
+            <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
+            <li><a class="inactive" href="#">Pagos pendientes</a></li>
          </ul>
       </li>{% endif %}
       {% if (app.user is null) or (app.user is not null and not is_granted('ROLE_ADMIN')) %}<li><a href="{{ path('users_pantalla_resultados') }}">Resultados</a></li>{% endif %}
@@ -72,10 +72,13 @@
             {% endimage %}
          {% endif %}
       </div>
-      {% if prus|length == 0 %}
-         <div class="alert alert-warning" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> No estás inscrito en ninguna prueba</div>
-      {% elseif com.esOficial %}
+      
+      {% if com.esOficial %}
          <div class="alert alert-danger" role="alert"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Esta es una competición oficial del club. Solo un coordinador puede registrar marcas</div>
+      {% elseif prus|length == 0 %}
+         <div class="alert alert-warning" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> No estás inscrito en ninguna prueba</div>
+      {% elseif com.fecha > hoy %}
+         <div class="alert alert-warning" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Esta competición no ha comenzado aún</div>
       {% else %}
          <div class="col-xs-12 col-sm-7">
             <div class="form-group">
