--- a/src/Easanles/AtletismoBundle/Resources/views/Prueba/list_prueba.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Prueba/list_prueba.html.twig
@@ -88,14 +88,14 @@
                   <ul class="dropdown-menu pull-right">
                      <li><a href="{{ path('pantalla_resultados', {'pru': pru.sid}) }}"><span class="glyphicon glyphicon-list"></span> Resultados</a></li>
                      <li><a href="{{ path('registrar_intentos', {'pru': pru.sid}) }}"><span class="glyphicon glyphicon-dashboard"></span> Registrar marcas</a></li>
-                     <li><a href="#" onClick="showModal('ediPRU', {{ com.sid }}, {{ pru.sid }}, null)"><span class="glyphicon glyphicon-edit"></span> Editar</a></li>
+                     <li><a href="#" onClick="showModal('ediPRU', {{ com.sid }}, {{ pru.sid }}, null)"><span class="glyphicon glyphicon-pencil"></span> Editar</a></li>
                      <li><a class="bg-danger" href="#" onClick="showModal('delPRU', {{ com.sid }}, {{ pru.sid }}, '{{ tpr }}')"><div class="text-danger"><span class="glyphicon glyphicon-remove"></span> Borrar</div></a></li>
                   </ul>
                </div>
                <div class="hidden-xs">
                   <a type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Resultados" href="{{ path('pantalla_resultados', {'pru': pru.sid}) }}"><span class="glyphicon glyphicon-list"></span></a>
                   <a type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Registrar marcas" href="{{ path('registrar_intentos', {'pru': pru.sid}) }}"><span class="glyphicon glyphicon-dashboard"></span></a>
-                  <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal('ediPRU', {{ com.sid }}, {{ pru.sid }}, null)"><span class="glyphicon glyphicon-edit"></span></button>
+                  <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal('ediPRU', {{ com.sid }}, {{ pru.sid }}, null)"><span class="glyphicon glyphicon-pencil"></span></button>
                   <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Borrar" onClick="showModal('delPRU', {{ com.sid }}, {{ pru.sid }}, '{{ tpr }}')"><span class="glyphicon glyphicon-remove"></span></button>
                </div>
             </td>
