--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -66,7 +66,7 @@
                   <ul class="dropdown-menu">
                      <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
                      <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
-                     <li><a class="inactive" href="#">Pagos pendientes</a></li>
+                     <li><a href="{{ path('pagos_pendientes') }}">Pagos pendientes</a></li>
                   </ul>
                </li>{% endif %}
                {% if (app.user is null) or (app.user is not null and not is_granted('ROLE_ADMIN')) %}<li><a href="{{ path('users_pantalla_resultados') }}">Resultados</a></li>{% endif %}
