--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_asistencia.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_asistencia.html.twig
@@ -27,7 +27,7 @@
          <ul class="dropdown-menu">
             <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
             <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
-            <li><a class="inactive" href="#">Pagos pendientes</a></li>
+            <li><a href="{{ path('pagos_pendientes') }}">Pagos pendientes</a></li>
          </ul>
       </li>
       <li><a href="{{ path('configuracion') }}">Configuración</a></li>
@@ -75,14 +75,8 @@
             </div>
          </div>
       </div>
-      <div class="col-xs-12 col-sm-8">
-         <h4>Atletas confirmados<span class="pull-right"><span id="atl-asist"></span> /<span id="atl-total"></span></span></h4>
-         <table class="table table-hover table-bordered table-striped table-responsive">
-            <tbody id="data-table">
-            </tbody>
-         </table>
-         <h4>Atletas inscritos sin confirmar</h4>
-      </div>
+      <div class="updater" onClick="getAsistTable($('#select-com').val())"></div>
+      <div id="data-tables" class="col-xs-12 col-sm-8"></div>
    </div>
 
 {% endblock %}
@@ -105,6 +99,7 @@
       {% endif %}
    </script>
    <script src="{{ asset('bundles/atletismo/js/resultados.js') }}"></script>
+   <script src="{{ asset('bundles/atletismo/js/modals.js') }}"></script>
 {% endblock %}
 
 
