--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/pant_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/pant_intento.html.twig
@@ -32,7 +32,7 @@
          <ul class="dropdown-menu">
             <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
             <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
-            <li><a class="inactive" href="#">Pagos pendientes</a></li>
+            <li><a href="{{ path('pagos_pendientes') }}">Pagos pendientes</a></li>
          </ul>
       </li>
       <li><a href="{{ path('configuracion') }}">Configuración</a></li>
