--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_pagos.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_pagos.html.twig
@@ -39,9 +39,9 @@
    
    <div id="container_header" class="row">
       <div class="col-xs-12">
-         <h4>Pagos pendientes: {{ count }} - Total: {{ costeTotal|number_format(2, ',', '.') }}€
-         <button type="button" class="btn btn-primary btn-lg hidden-xs pull-right" disabled> Marcar como pagado</button></h4>
-         <button type="button" class="btn btn-primary btn-lg visible-xs col-xs-8 col-xs-offset-2" disabled> Marcar como pagado</button>
+         <h4>{% if count == 1 %}1 pago pendiente{% else %}{{ count }} pagos pendientes{% endif %} - Total: {{ costeTotal|number_format(2, ',', '.') }}€
+         <button type="button" class="paybtn btn btn-primary btn-lg hidden-xs pull-right" onClick="sendPaidIns()" disabled> Marcar como pagado</button></h4>
+         <button type="button" class="paybtn btn btn-primary btn-lg visible-xs col-xs-8 col-xs-offset-2" onClick="sendPaidIns()" disabled> Marcar como pagado</button>
       </div>
    </div>
    <div class="row">
@@ -59,17 +59,25 @@
                   {% for atl in com.atls %}
                      <tr>
                         <td>{{ atl.apellidos }}, {{ atl.nombre }}</td>
-                        <td>{{ atl.inss|length }} <button type="button" class="btn btn-xs btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Mostrar" onClick="toggleDropListTable()"><span class="glyphicon glyphicon-collapse-down"></span></button></td>
+                        <td>{{ atl.inss|length }} <button type="button" class="btn btn-xs btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Mostrar" onClick="toggleDropListTable('{{ com.sid }}_{{ atl.id }}', $(this))"><span class="glyphicon glyphicon-collapse-down" aria-hidden="true"></span></button></td>
                         <td>{{ atl.costeAtl|number_format(2, ',', '.') }}€</td>
-                        <td><input id="cball-{{ atl.id }}" type="checkbox" class="sel-cball"></td>
+                        <td><input id="cball-{{ com.sid }}_{{ atl.id }}" type="checkbox" onClick="checkboxGroup(this); selectIns()"></td>
                      </tr>
-                     {% for ins in atl.inss %}
-                        <tr>
-                           <td colspan="2">{{ ins.prueba }}</td>
-                           <td>{{ ins.coste|number_format(2, ',', '.') }}€</td>
-                           <td><input id="cb-{{ ins.sid }}" type="checkbox" class="sel-cb"></td>
-                        </tr>
-                     {% endfor %}
+                     <tr><td colspan="4" style="padding: 0px">
+                        <div id="droplist-{{ com.sid }}_{{ atl.id }}" class="droplist">
+                           <table class="table table-condensed">
+                              <tbody>
+                                 {% for ins in atl.inss %}
+                                    <tr>
+                                       <td class="td-padding"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> {{ ins.prueba }}</td>
+                                       <td>{{ ins.coste|number_format(2, ',', '.') }}€</td>
+                                       <td><input id="cb-{{ ins.sid }}" type="checkbox" class="group-{{ com.sid }}_{{ atl.id }}" onClick="checkboxGroup(this); selectIns()"></td>
+                                    </tr>
+                                 {% endfor %}
+                              </tbody>
+                           </table>
+                        </div>
+                     </td></tr>
                   {% endfor %}
                </tbody>
             </table>
@@ -80,6 +88,14 @@
 {% endblock %}
 
 {% block js %}
+   <script type="javascript">
+      $(document).ready(function(){
+         $('.droplist').each(function (){
+            $(this).data("height", $(this).height());
+        	   $(this).css("height", "0px");
+         });
+      )}
+   </script>
    <script src="{{ asset('bundles/atletismo/js/scripts.js') }}"></script>
 {% endblock %}
 
